--- a/articles/2030年前碳达峰行动方案.zh.md
+++ b/articles/2030年前碳达峰行动方案.zh.md
@@ -1,12 +1,10 @@
 ---
 title: 国务院2030年前碳达峰行动方案（摘要）
-description: 为深入贯彻落实党中央、国务院关于碳达峰、碳中和的重大战略决策，扎实
-推进碳达峰行动，制定本方案。2021年10月24日，国务院
+description: 为深入贯彻落实党中央、国务院关于碳达峰、碳中和的重大战略决策，扎实推进碳达峰行动，制定本方案。2021年10月24日，国务院
 tags: ['Chinese Government Articles']
 cover: ./2023年前碳达峰行动方案/cover.png
-language: cn
+language: zh
 date: 2023-01-25T06:30+08:00
-
 ---
 
 ##  **一、主要目标：**
